Layout do Portifólio montado

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h4 class="header-text bold"> Luan Loose </h4>
             </div>
             <div class="header-block">
-                <a href="https://github.com/">
+                <a href="mailto:luanloose4.0@gmail.com?subject=Contato%20Portifólio">
                     <img class="header-icon" src="assets/gmail.png"></img>
                 </a>
                 <a href="https://github.com/luanloose">
