Icones atualizados + cursos adicionado

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
                 <!-- script -->
             </div>
         </div>
+
+        <div class="container-content green-light">
+            <h1 class="white">Cursos</h1>
+            <div class="content" id="content4">
+                <!-- script -->
+            </div>
+        </div>
     </div>
 
 </body>
