--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
+    <!--PARA ACEITAR ACENTOS-->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+    <!--CONTEÚDO EM PORTUGUÊS-->
+    <meta property="og:locale" content="pt_BR">
+
+    <!--URL DO SITE-->
+    <meta property="og:url" content="http://luanloose.github.io">
+
+    <!--TÍTULO E NOME DO SITE-->
+    <meta property="og:title" content="Portifólio">
+    <meta property="og:site_name" content="Projetos pessoais de Luan Loose">
+
+    <!-- DESCRIÇÃO DO SITE-->
+    <meta property="og:description" content="Projetos que fiz para estudar as tecnologias na qual tenho interesse em atuar ou que já atuo">
+
+    <!-- IMAGEM DO SITE -->
+    <meta property="og:image" content="assets/github.png"/>
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="600">
+
     <script src="script.js"></script>
 </head>
 
