--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- IMAGEM DO SITE -->
     <meta property="og:image" content="assets/github.png"/>
-    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
 
