--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:description" content="Projetos que fiz para estudar as tecnologias na qual tenho interesse em atuar ou que já atuo">
 
     <!-- IMAGEM DO SITE -->
-    <meta property="og:image" content="assets/github.png"/>
+    <meta property="og:image" content="assets/code.png"/>
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
