--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="http://luanloose.github.io">
 
     <!--TÍTULO E NOME DO SITE-->
-    <meta property="og:title" content="Portifólio">
+    <meta property="og:title" content="Portfólio">
     <meta property="og:site_name" content="Projetos pessoais de Luan Loose">
 
     <!-- DESCRIÇÃO DO SITE-->
@@ -44,7 +44,7 @@
                 <h4 class="header-text bold"> Luan Loose </h4>
             </div>
             <div class="header-block">
-                <a href="mailto:luanloose4.0@gmail.com?subject=Contato%20Portifólio">
+                <a href="mailto:luanloose4.0@gmail.com?subject=Contato%20Portfólio">
                     <img class="header-icon" src="assets/gmail.png"></img>
                 </a>
                 <a href="https://github.com/luanloose">
