Adicionando palestras e eventos

--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
                 <!-- script -->
             </div>
         </div>
+
+        <div class="container-content">
+            <h1 class="green">Eventos</h1>
+            <div class="content" id="content5">
+                <!-- script -->
+            </div>
+        </div>
     </div>
 
 </body>
